--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,12 +6,12 @@
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
 </head>
-<body class="grey-bg">
+<body class="main-bg">
   
   <!-- header.ejs 파일 재사용  -->
   <%- include('header.ejs') %>
 
-  <div class="white-bg">
+  <div class="sub-bg">
     <!-- 글이 여러개가 될 수 있으니 length로 작성 -->
     <% for(let i = 0; i < 글목록.length; i++) { %>
       <div class="list-box">
