수정,삭제 코드 작성

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -17,6 +17,10 @@
     <% for (let i = 0; i < 글목록.length; i++) { %>
       <h2><%= 글목록[i].title %></h2>
       <p><%= 글목록[i].content %></p>
+            <!-- 수정 링크 추가 -->
+            <a href="/edit/<%= 글목록[i]._id %>">수정</a>
+            <!-- 삭제 링크 추가 -->
+            <a href="/delete/<%= 글목록[i]._id %>">삭제</a>
     <% } %>
   </div>
 
