--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,4 +1,3 @@
-<!-- edit.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +14,7 @@
   <div class="white-bg">
     <form action="/update/<%= post._id %>" method="post">
       <label for="title">Title:</label>
-      <input type="text" id="title" name="title" value="<%= post.title %>" required>
+      <input type="text" id="title" name="title" value="<%= result.title %>" required>
       <br>
       <label for="content">Content:</label>
       <textarea id="content" name="content" required><%= post.content %></textarea>
