--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -17,7 +17,7 @@
       <input type="text" id="title" name="title" value="<%= result.title %>" required>
       <br>
       <label for="content">Content:</label>
-      <textarea id="content" name="content" required><%= post.content %></textarea>
+      <textarea id="content" name="content" required><%= result.content %></textarea>
       <br>
       <button type="submit">Update Post</button>
     </form>
