--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,24 +6,23 @@
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
 </head>
-<body class="main-bg">
+<body class="grey-bg">
   
   <!-- header.ejs 파일 재사용  -->
  
   <%- include('header.ejs') %>
 
-  <div class="sub-bg">
-    <!-- 글이 여러개가 될 수 있으니 length로 작성 -->
+  <div class="white-bg">
     <% for (let i = 0; i < 글목록.length; i++) { %>
-      <h2><%= 글목록[i].title %></h2>
-      <p><%= 글목록[i].content %></p>
-            <!-- 수정 링크 추가 -->
-            <a href="/edit/<%= 글목록[i]._id %>">수정</a>
-            <!-- 삭제 링크 추가 -->
-            <a href="/delete/<%= 글목록[i]._id %>">삭제</a>
+      <div class="list-box">
+        <h2>
+          <a href="/detail/<%= 글목록[i]._id %>"><%= 글목록[i].title %></a>
+        </h2>
+
+       <p>글 내용</p>
+      </div>
     <% } %>
   </div>
-
-</body>
+  
 </body>
 </html>
