--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,20 +8,14 @@
 </head>
 <body class="grey-bg">
   
-  <!-- header.ejs 파일 재사용  -->
   <%- include('header.ejs') %>
 
-  <div class="white-bg">
-    <form action="/update/<%= post._id %>" method="POST">
-      <label for="title">Title:</label>
-      <input type="text" id="title" name="title" value="<%= result.title %>" required>
-      <br>
-      <label for="content">Content:</label>
-      <textarea id="content" name="content" required><%= result.content %></textarea>
-      <br>
-      <button type="submit">Update Post</button>
-    </form>
-  </div>
+  <form class="form-box=" action="/abcd" method="POST">
+    <h4>글 작성</h4>
+    <input name="title" value="123">
+    <input name="content">
+    <button type="submit">전송</button>
+  </form>
 
 </body>
 </html>
