--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,10 +10,10 @@
   
   <%- include('header.ejs') %>
 
-  <form class="form-box=" action="/abcd" method="POST">
+  <form class="form-box" action="/id" method="POST">
     <h4>글 작성</h4>
-    <input name="title" value="123">
-    <input name="content">
+    <input name="title" value="<%= result.title %>">
+    <input name="content" value="<%= result.content %>">
     <button type="submit">전송</button>
   </form>
 
