--- a/views/list.ejs
+++ b/views/list.ejs
@@ -17,6 +17,7 @@
       <div class="list-box">
         <h2>
           <a href="/detail/<%= 글목록[i]._id %>"><%= 글목록[i].title %></a>
+          <a href="/edit/<%= 글목록[i]._id %>">수정</a>
         </h2>
 
        <p>글 내용</p>
