--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -9,9 +9,10 @@
 <body class="grey-bg">
   
   <%- include('header.ejs') %>
-
+q
   <form class="form-box" action="/edit" method="POST">
     <h4>수정</h4>
+    <input name="id" value="<%= result._id %>" style="display: none;">
     <input name="title" value="<%= result.title %>">
     <input name="content" value="<%= result.content %>">
     <button type="submit">전송</button>
