--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,9 +9,9 @@
   <%- include('header.ejs') %>
 
   <form class="form-box" action="/login" method="POST">
-    <h4>글 작성</h4>
-    <input name="name" class="input-title">
-    <input name="password" class="input-content">
+    <h4>로그인</h4>
+    <input name="username">
+    <input name="password" type="password">
     <button type="submit">전송</button>
 </form> 
 
