--- a/views/join.ejs
+++ b/views/join.ejs
@@ -5,27 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
-  
+</head>
+<body class="grey-bg">
+
   <%- include('header.ejs') %>
-<!-- 
-  <form class="form-box" action="/login" method="POST">
-    <h4>글 작성</h4>
-    <input name="name" class="input-title">
-    <input name="password" class="input-content">
+
+  <form class="form-box" action="/join" method="POST">
+    <h4>가입</h4>
+    <input name="username">
+    <input name="password" type="password">
     <button type="submit">전송</button>
-</form>  -->
-
-<div class="white-bg">
-  <h2>Login</h2>
-  <form action="/join" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <button type="submit">Login</button>
   </form>
-</div>
-
-</body>
-</body>
+</body>  
 </html>
