--- a/views/join.ejs
+++ b/views/join.ejs
@@ -14,6 +14,7 @@
     <h4>가입</h4>
     <input name="username">
     <input name="password" type="password">
+    <input name="email" type="email">
     <button type="submit">전송</button>
   </form>
 </body>  
