--- a/views/join.ejs
+++ b/views/join.ejs
@@ -10,11 +10,12 @@
 
   <%- include('header.ejs') %>
 
-  <form class="form-box" action="/join" method="POST">
+  <form class="join-form" action="/join" method="POST">
     <h4>가입</h4>
-    <input name="username">
-    <input name="password" type="password">
-    <input name="email" type="email">
+    <input name="username" placeholder="ID">
+    <input name="password" type="password" placeholder="비밀번호">
+    <input name="passwordCheck" type="password" placeholder="비밀번호 확인">
+    <input name="email" type="email" placeholder="이메일">
     <button type="submit">전송</button>
   </form>
 </body>  
