--- a/public/main.css
+++ b/public/main.css
@@ -91,6 +91,7 @@ input,div {
   border: 1px solid #ddd;
   border-radius: 3px;
 }
+
 .form-box button {
   padding: 10px;
   border : none;
@@ -107,4 +108,53 @@ input,div {
 
 .form-title {
   height: 40vh;
+}
+
+.join-form {
+  background : #eee;
+  padding : 25px;
+  margin: 20px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+}
+
+.join-form input {
+  padding : 10px;
+  font-size: 1rem;
+  width: 40vw;
+  height: 10vh;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 10px;
+}
+
+.join-form .input-username {
+  width: 40vw; /* 예시로 너비를 200px로 설정 */
+  height: 10vh;
+  margin-bottom: 10px;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+}
+
+/* 스타일 충돌 발생 */
+.join-form .input-password {
+  width: 40vw; /* 예시로 전체 너비로 설정 */
+  height: 40vh;
+  margin-bottom: 10px;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+}
+
+.join-form button {
+  width: 40vw;
+  padding: 10px;
+  border : none;
+  background : lightgrey;
+  border-radius: 5px;
+  margin: 10px;
 }
