--- a/views/write.ejs
+++ b/views/write.ejs
@@ -5,16 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
-  
+  <body class="grey-bg">
+    
   <%- include('header.ejs') %>
 
-  <form class="form-box" action="/newPost" method="POST">
+  <form class="form-box" action="/newPost" method="POST" enctype="multipart/form-data">
     <h4>글 작성</h4>
     <input name="title" class="input-title">
     <input name="content" class="input-content">
+    <input type="file" name="image" accept="image/*">
     <button type="submit">전송</button>
 </form> 
 
-</body>
 </body>
 </html>
