글제목이 뜨지 않음

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -26,6 +26,8 @@
   </div>
 
   <a href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음</a>
+  <!-- <a href="/list/next/<%= 글목록.length > 0 ? 글목록[글목록.length-1]._id : '' %>">다음</a> -->
+
 
 
   <!-- <body class="grey-bg">
