--- a/views/list.ejs
+++ b/views/list.ejs
@@ -25,7 +25,14 @@
 
   </div>
 
-  <a href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음</a>
+  <% if (글목록.length > 0) { %>
+    <a href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음</a>
+  <% } else { %>
+    <!-- 예외 처리 또는 다른 처리 로직 추가 -->
+    <p>글목록이 비어있습니다.</p>
+  <% } %>
+
+  <!-- <a href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음</a> -->
   <!-- <a href="/list/next/<%= 글목록.length > 0 ? 글목록[글목록.length-1]._id : '' %>">다음</a> -->
 
 
