--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -10,11 +10,19 @@
 
   <%- include('header.ejs') %>
 
-  <!-- <%= JSON.stringify(result) %> -->
   <div class="detail-bg">
     <h4><%= result.title %></h4>
     <p><%= result.content %></p>
-</div> 
+    <hr style="margin-top: 60px">
+    <div>
+      <p><strong>작성자</strong> 댓글내용</p>
+    </div>
+    <form action="/comment" method="POST">
+      <input name="content">
+      <input name="parentId" value="<%= result._id %>" style="display: none">
+      <button type="submit">댓글작성</button>
+    </form>
+  </div> 
 
 </body>
 </html>
