--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -14,9 +14,14 @@
     <h4><%= result.title %></h4>
     <p><%= result.content %></p>
     <hr style="margin-top: 60px">
+
     <div>
-      <p><strong>작성자</strong> 댓글내용</p>
+      <% for (let i = 0; i < result2.length; i++) { %>
+        <p><strong><%= result2[i].writer %></strong> <%= result2[i].content %></p>
+     <% } %> 
     </div>
+
+    
     <form action="/comment" method="POST">
       <input name="content">
       <input name="parentId" value="<%= result._id %>" style="display: none">
@@ -26,3 +31,4 @@
 
 </body>
 </html>
+
