header부분 a링크로 수정

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,6 @@
 <div class="header">
-  <a class="logo">Board</a>
-  <a>HOME</a>
-  <a>LIST</a>
-  <a>LOGIN</a>
-  <a>SIGN UP</a>
+  <a href="/" style="font-size: 3rem;">HOME</a>
+  <a href="/list"><p>LIST</p></a>
+  <a href="/login"><p>LOGIN</p></a>
+  <a href="/join"><p>SIGN UP</p></a>
 </div>
