--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,6 @@
 <div class="header">
   <a href="/" style="font-size: 3rem;">HOME</a>
+  <a href="/write"><p>WRITE</p></a>
   <a href="/list"><p>LIST</p></a>
   <a href="/login"><p>LOGIN</p></a>
   <a href="/join"><p>SIGN UP</p></a>
