로그인 폼 수정

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,12 +8,12 @@
   
   <%- include('header.ejs') %>
 
-  <form class="form-box" action="/login" method="POST">
-    <h4>로그인</h4>
-    <input name="username">
-    <input name="password" type="password">
-    <button type="submit">전송</button>
-</form> 
+<form class="form-box" action="/login" method="POST">
+  <h4>Login</h4>
+  <input name="username" placeholder="Username">
+  <input name="password" type="password" placeholder="Password">
+  <button type="submit">Submit</button>
+</form>
 
 </body>
 </body>
