--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
-  
+  <body class="grey-bg"></body>
   <%- include('header.ejs') %>
 
   <form class="form-box" action="/login" method="POST">
@@ -15,6 +15,5 @@
     <button type="submit">전송</button>
 </form> 
 
-</body>
 </body>
 </html>
