css 수정, 에러 확인

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -10,12 +10,6 @@
 
     <%- include('header.ejs') %>
 
-<<<<<<< HEAD
-  <div class="grey-bg">
-    <h4><%= result.title %></h4>
-    <p><%= result.content %></p>
-    <hr style="margin-top: 60px">
-=======
     <div class="detail-bg">
       <h4><%= result.title %></h4>
       <p><%= result.content %></p>
@@ -38,16 +32,14 @@
         />
         <button type="submit">댓글작성</button>
       </form>
->>>>>>> css/issue13-1
 
     </div>
-<<<<<<< HEAD
 
-    <form action="/comment" method="POST">
+    <!-- <form action="/comment" method="POST">
       <input name="content">
       <input name="parentId" value="<%= result._id %>" style="display: none">
       <button type="submit">댓글작성</button>
-    </form>
+    </form> -->
 <!--     
     <form action="/comment" method="POST">
       <input name="content">
@@ -57,7 +49,4 @@
   </div> 
 
 </body>
-=======
-  </body>
->>>>>>> css/issue13-1
 </html>
