--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,39 @@
+<!-- login.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Login</title>
   <link rel="stylesheet" href="main.css">
-  <body class="grey-bg"></body>
-  <%- include('header.ejs') %>
+</head>
+<body class="grey-bg">
 
-<form class="form-box" action="/login" method="POST">
-  <h4>Login</h4>
-  <input name="username" placeholder="Username">
-  <input name="password" type="password" placeholder="Password">
-  <button type="submit">Submit</button>
-</form>
+  <% include('header.ejs') %>
+
+  <form class="form-box" action="/login" method="POST">
+    <h4>Login</h4>
+    <input name="username" placeholder="Username">
+    <input name="password" type="password" placeholder="Password">
+    <button type="submit">Submit</button>
+  </form>
+
+  <a href="/login" class="login-link">Login</a>
+
+  <% if (user) { %>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const logoutLink = document.createElement('a');
+        logoutLink.href = '/logout';
+        logoutLink.textContent = 'Logout';
+  
+        const loginLink = document.querySelector('.login-link');
+        if (loginLink) {
+          loginLink.style.display = 'none';
+          document.querySelector('.header-container').appendChild(logoutLink);
+        }
+      });
+    </script>
 
 </body>
 </html>
