--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,5 +3,9 @@
   <a href="/write"><p>WRITE</p></a>
   <a href="/list"><p>LIST</p></a>
   <a href="/login"><p>LOGIN</p></a>
+  
+  <a href="/logout">Logout</a>
   <a href="/join"><p>SIGN UP</p></a>
 </div>
+
+
