--- a/views/write.ejs
+++ b/views/write.ejs
@@ -10,9 +10,9 @@
   <%- include('header.ejs') %>
 
   <form class="form-box" action="/newPost" method="POST">
-    <h4>글 작성</h4>
-    <input name="title" class="input-title">
-    <input name="content" class="input-content">
+    <h4  >글 작성</h4>
+    <input name="title" class="input-title" placeholder="제목을 입력해주세요">
+    <input name="content" class="input-content" placeholder="내용을 입력해주세요">
     <!-- <input type="file" name="image" accept="image/*"> -->
     <button type="submit">전송</button>
 </form> 
