--- a/views/list.ejs
+++ b/views/list.ejs
@@ -15,9 +15,9 @@
       <div class="list-box">
         <h2>
           <a href="/detail/<%= 글목록[i]._id %>"><%= 글목록[i].title %></a>
-          <a href="/edit/<%= 글목록[i]._id %>">수정</a>
+          <!-- <a href="/edit/<%= 글목록[i]._id %>">수정</a>
           
-          <a href="/delete/<%= 글목록[i]._id %>">삭제</a>
+          <a href="/delete/<%= 글목록[i]._id %>">삭제</a> -->
         </h2>
        <p>글 내용</p>
       </div>
