--- a/views/list.ejs
+++ b/views/list.ejs
@@ -13,23 +13,30 @@
   <div class="white-bg">
     <% for (let i = 0; i < 글목록.length; i++) { %>
       <div class="list-box">
-        <h2>
+        <h2 style="font-size: 1rem;">
+          <%= i + 1 %>.
           <a href="/detail/<%= 글목록[i]._id %>"><%= 글목록[i].title %></a>
-          <!-- <a href="/edit/<%= 글목록[i]._id %>">수정</a>
-          
-          <a href="/delete/<%= 글목록[i]._id %>">삭제</a> -->
         </h2>
-       <p>글 내용</p>
+        <p>작성일: <%= new Date(글목록[i].createdAt).toLocaleString() %></p>
+       <!-- <p>글 내용</p> -->
       </div>
     <% } %>
 
   </div>
 
-  <% if (글목록.length > 0) { %>
+
+  <% if (글목록 && Array.isArray(글목록) && 글목록.length > 0) { %>
     <a href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음</a>
   <% } else { %>
     <p>글목록이 비어있습니다.</p>
   <% } %>
+
+
+  <!-- <% if (글목록.length > 0) { %>
+    <a href="/list/next/<%= 글목록[글목록.length-1]._id %>">다음</a>
+  <% } else { %>
+    <p>글목록이 비어있습니다.</p>
+  <% } %> -->
 
   </body>
 </html>
