--- a/views/main.ejs
+++ b/views/main.ejs
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
-  
+  </head>
+  <body>
+
   <%- include('header.ejs') %>
 
   <h1>mainpage</h1>
