--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,13 @@
 <div class="header">
+  <!-- <a href="/">HOME</a> -->
   <a href="/" style="font-size: 3rem;">HOME</a>
+  <% if (isLoggedIn) { %>
+      <a href="/logout">LOGOUT</a>
+  <% } else { %>
+      <a href="/login">LOGIN</a>
+  <% } %>
   <a href="/write"><p>WRITE</p></a>
   <a href="/list"><p>LIST</p></a>
-  <a href="/login"><p>LOGIN</p></a>
+  <!-- <a href="/login"><p>LOGIN</p></a> -->
   <a href="/join"><p>SIGN UP</p></a>
 </div>
