--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="main.css">
-  <body class="grey-bg"></body>
-  <%- include('header.ejs') %>
+  </head>
+  <body class="grey-bg">
+    <%- include('header.ejs') %>
 
   <form class="form-box" action="/login" method="POST">
     <h4>로그인</h4>
