--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,86 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Post</title>
-  <link rel="stylesheet" href="main.css">
-  <style>
-    body {
-  background-color: #f0f0f0;
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-.header {
-  margin-bottom: 5vh;
-  background-color: #333;
-  color: #fff;
-  padding: 10px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header a {
-  text-decoration: none;
-  color: #fff;
-  margin-right: 20px;
-  font-size: 1rem;
-}
-    .form-box {
-  width: 60vw;
-  height: auto;
-  background-color: hsl(0, 0%, 100%);
-  padding: 3vw;
-  margin: auto;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
-}
-.form-box h4 {
-  font-size: 1.5rem;
-  margin-bottom: 3vw;
-  text-align: center;
-}
-
-.form-box input,
-.form-box button {
-  width: calc(100% - 2vw);
-  margin-bottom: 1vw;
-  padding: 1vw;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
-.form-box button {
-  width: 20%;
-  background-color: #3498db;
-  color: #fff;
-  padding: 1vw 2vw;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  height: 5vh;
-  margin-top: 2vw;
-}
-
-  </style>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="/main.css" />
 </head>
+
 <body class="grey-bg">
-  
+
   <%- include('header.ejs') %>
 
-<div class ="white-bg">
+    <div>
 
   <form class="form-box" action="/edit" method="POST">
     <h4>수정</h4>
     <input name="id" value="<%= result._id %>" style="display: none;">
     <input name="title" value="<%= result.title %>">
     <input name="content" value="<%= result.content %>">
-    <button type="submit">전송</button>
+    <button type="submit">EDIT</button>
   </form>
 </div>
   
