--- a/views/write.ejs
+++ b/views/write.ejs
@@ -11,11 +11,11 @@
   <%- include('header.ejs') %>
 
   <form class="form-box" action="/newPost" method="POST">
-    <h4>글 작성</h4>
+    <h4>WRITE</h4>
     <input name="title" class="input-title" placeholder="제목을 입력하세요.">
     <input name="content" class="input-content" placeholder="내용을 입력하세요.">
     <!-- <input type="file" name="image" accept="image/*"> -->
-    <button type="submit">전송</button>
+    <button type="submit">SUBMIT</button>
 </form> 
 
 </body>
